php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #62490 dba_delete returns true on missing item (inifile)
Submitted: 2012-07-06 08:47 UTC Modified: 2013-12-03 15:08 UTC
From: marc-bennewitz at arcor dot de Assigned:
Status: Closed Package: DBM/DBA related
PHP Version: 5.4.4 OS: openSUSE 11.3 (x86_64)
Private report: No CVE-ID: None
 [2012-07-06 08:47 UTC] marc-bennewitz at arcor dot de
Description:
------------
The function "dba_delete" returns true on delete a non-existing item using inifile handler.

I tested flatfile, inifile, gdbm, qdbm and db4. All other hander not tested.

Test script:
---------------
$dba = dba_open(sys_get_temp_dir() . DIRECTORY_SEPARATOR . uniqid('dba_'), 'c', 'inifile');

var_dump(dba_delete('unknown', $dba));

Expected result:
----------------
bool(false)

Actual result:
--------------
bool(true)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-12-03 15:08 UTC] mike@php.net
-Status: Open +Status: Verified
 [2013-12-05 10:28 UTC] mike@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5a420c868083d741d969812b1b6ac2dc380cd1e3
Log: fix bug #62490
 [2013-12-05 10:28 UTC] mike@php.net
-Status: Verified +Status: Closed
 [2013-12-06 08:57 UTC] ab@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5a420c868083d741d969812b1b6ac2dc380cd1e3
Log: fix bug #62490
 [2014-01-17 21:59 UTC] bwoebi@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5a420c868083d741d969812b1b6ac2dc380cd1e3
Log: fix bug #62490
 [2014-02-06 08:43 UTC] bwoebi@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5a420c868083d741d969812b1b6ac2dc380cd1e3
Log: fix bug #62490
 [2016-07-20 11:41 UTC] davey@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5a420c868083d741d969812b1b6ac2dc380cd1e3
Log: fix bug #62490
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC