fix bug #62490

inifiles delete handler did not return false if the key was not found