ext/dba/libinifile/inifile.c
@@ -413,7 +413,7 @@ static int inifile_copy_to(inifile *dba, size_t pos_start, size_t pos_end, inifi
 /* {{{ inifile_filter
  * copy from to dba while ignoring key name (group must equal)
  */
-static int inifile_filter(inifile *dba, inifile *from, const key_type *key TSRMLS_DC) 
+static int inifile_filter(inifile *dba, inifile *from, const key_type *key, zend_bool *found TSRMLS_DC)
 {
 	size_t pos_start = 0, pos_next = 0, pos_curr;
 	int ret = SUCCESS;
@@ -424,6 +424,9 @@ static int inifile_filter(inifile *dba, inifile *from, const key_type *key TSRML
 	while(inifile_read(from, &ln TSRMLS_CC)) {
 		switch(inifile_key_cmp(&ln.key, key TSRMLS_CC)) {
 		case 0:
+			if (found) {
+				*found = (zend_bool) 1;
+			}
 			pos_curr = php_stream_tell(from->fp);
 			if (pos_start != pos_next) {
 				php_stream_seek(from->fp, pos_start, SEEK_SET);
@@ -458,7 +461,7 @@ static int inifile_filter(inifile *dba, inifile *from, const key_type *key TSRML
 
 /* {{{ inifile_delete_replace_append
  */
-static int inifile_delete_replace_append(inifile *dba, const key_type *key, const val_type *value, int append TSRMLS_DC) 
+static int inifile_delete_replace_append(inifile *dba, const key_type *key, const val_type *value, int append, zend_bool *found TSRMLS_DC)
 {
 	size_t pos_grp_start=0, pos_grp_next;
 	inifile *ini_tmp = NULL;
@@ -516,7 +519,7 @@ static int inifile_delete_replace_append(inifile *dba, const key_type *key, cons
 		if (key->name && strlen(key->name)) {
 			/* 6 */
 			if (!append && ini_tmp) {
-				ret = inifile_filter(dba, ini_tmp, key TSRMLS_CC);
+				ret = inifile_filter(dba, ini_tmp, key, found TSRMLS_CC);
 			}
 
 			/* 7 */
@@ -563,7 +566,15 @@ static int inifile_delete_replace_append(inifile *dba, const key_type *key, cons
  */
 int inifile_delete(inifile *dba, const key_type *key TSRMLS_DC) 
 {
-	return inifile_delete_replace_append(dba, key, NULL, 0 TSRMLS_CC);
+	return inifile_delete_replace_append(dba, key, NULL, 0, NULL TSRMLS_CC);
+}
+/* }}} */
+
+/* {{{ inifile_delete_ex
+ */
+int inifile_delete_ex(inifile *dba, const key_type *key, zend_bool *found TSRMLS_DC)
+{
+	return inifile_delete_replace_append(dba, key, NULL, 0, found TSRMLS_CC);
 }	
 /* }}} */
 
@@ -571,7 +582,15 @@ int inifile_delete(inifile *dba, const key_type *key TSRMLS_DC)
  */
 int inifile_replace(inifile *dba, const key_type *key, const val_type *value TSRMLS_DC) 
 {
-	return inifile_delete_replace_append(dba, key, value, 0 TSRMLS_CC);
+	return inifile_delete_replace_append(dba, key, value, 0, NULL TSRMLS_CC);
+}
+/* }}} */
+
+/* {{{ inifile_replace_ex
+ */
+int inifile_replace_ex(inifile *dba, const key_type *key, const val_type *value, zend_bool *found TSRMLS_DC)
+{
+	return inifile_delete_replace_append(dba, key, value, 0, found TSRMLS_CC);
 }
 /* }}} */
 
@@ -579,7 +598,7 @@ int inifile_replace(inifile *dba, const key_type *key, const val_type *value TSR
  */
 int inifile_append(inifile *dba, const key_type *key, const val_type *value TSRMLS_DC) 
 {
-	return inifile_delete_replace_append(dba, key, value, 1 TSRMLS_CC);
+	return inifile_delete_replace_append(dba, key, value, 1, NULL TSRMLS_CC);
 }
 /* }}} */
 
